docs: Add 404 Redirect

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - ".github/workflows/docs.yml"
+      - ".github/scripts/deploy-404.sh"
       - "requirements-docs.txt"
       - "mkdocs.yml"
       - "docs/**"
@@ -14,6 +15,7 @@ on:
       - main
     paths:
       - ".github/workflows/docs.yml"
+      - ".github/scripts/deploy-404.sh"
       - "requirements-docs.txt"
       - "mkdocs.yml"
       - "docs/**"
@@ -34,6 +36,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
       - name: Configure Git Credentials
@@ -64,8 +67,13 @@ jobs:
       - name: Deploy development version from main branch
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
-          echo "Deploying docs from main to the 'dev' version..."
-          mike deploy --push --update-aliases dev
+          mike deploy --push --update-aliases dev latest
+
+          echo "Setting 'latest' as the default version for the site..."
+          mike set-default --push latest
+
+          # Deploy 404 page
+          bash .github/scripts/deploy-404.sh ${{ github.repository }} ${{ secrets.GITHUB_TOKEN }}
 
       - name: Deploy new release version and set as latest
         if: github.event_name == 'release'
@@ -77,3 +85,6 @@ jobs:
 
           echo "Setting 'latest' as the default version for the site..."
           mike set-default --push latest
+
+          # Call the reusable script to deploy the 404 page, passing the token
+          bash .github/scripts/deploy-404.sh ${{ github.repository }} ${{ secrets.GITHUB_TOKEN }}
