docs: Add redirect for sdk/python to new docs location

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -172,4 +172,4 @@ plugins:
         "tutorials/python/8-agent-capabilities.md": "tutorials/python/7-streaming-and-multiturn.md"
         "tutorials/python/9-ollama-agent.md": "tutorials/python/7-streaming-and-multiturn.md"
         "tutorials/python/10-next-steps.md": "tutorials/python/8-next-steps.md"
-        "sdk/python/index.md": "sdk/python/api/index.html"
+        "sdk/python/": "sdk/python/api/index.html"
