docs: Change site name to include Documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project information
-site_name: Agent2Agent (A2A) Protocol
+site_name: Agent2Agent (A2A) Protocol Documentation
 site_url: https://a2a-protocol.org/
 site_description: >-
   The A2A protocol is an open standard that allows different AI agents to securely communicate, collaborate, and solve complex problems together.
