--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -38,3 +38,4 @@ jobs:
           VALIDATE_JSON_PRETTIER: false
           VALIDATE_YAML_PRETTIER: false
           VALIDATE_GIT_COMMITLINT: false
+          VALIDATE_GITHUB_ACTIONS_ZIZMOR: false
