--- a/.github/workflows/links.yaml
+++ b/.github/workflows/links.yaml
@@ -1,26 +1,50 @@
-name: Links
+name: Lychee Link Checker
 
 on:
   repository_dispatch:
   workflow_dispatch:
   schedule:
     - cron: "00 18 * * *"
+  pull_request:
 
 jobs:
-  linkChecker:
+  check_links:
+    name: Check for Broken Links
     runs-on: ubuntu-latest
     if: |
       github.repository == 'a2aproject/A2A'
 
     steps:
-      - uses: actions/checkout@v5
+      - name: Checkout Repository
+        uses: actions/checkout@v5
 
-      - name: Link Checker
-        id: lychee
+      - name: Get relevant changed files
+        id: changed-files
+        if: github.event_name == 'pull_request'
+        uses: tj-actions/changed-files@v44
+        with:
+          files: |
+            **/*.md
+            **/*.mdx
+            **/*.html
+            **/*.htm
+            **/*.rst
+            **/*.txt
+
+      - name: Run Lychee on changed files (PR)
+        if: github.event_name == 'pull_request' && steps.changed-files.outputs.all_changed_files != ''
         uses: lycheeverse/lychee-action@v2
+        with:
+          args: --no-progress ${{ steps.changed-files.outputs.all_changed_files }}
 
-      - name: Create Issue From File
-        if: env.lychee_exit_code != 0
+      - name: Run Lychee on all files (Scheduled/Manual)
+        if: github.event_name != 'pull_request'
+        uses: lycheeverse/lychee-action@v2
+        with:
+          args: --no-progress .
+
+      - name: Create Issue on Failure
+        if: failure() && github.event_name != 'pull_request'
         uses: peter-evans/create-issue-from-file@v5
         with:
           title: Link Checker Report
