docs: Update Site Name for SEO

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 # Project information
-site_name: Agent2Agent (A2A) Protocol Documentation
+site_name: A2A Protocol Documentation
 site_url: https://a2a-protocol.org/
 site_description: >-
-  The A2A protocol is an open standard that allows different AI agents to securely communicate, collaborate, and solve complex problems together.
+  The Agent2Agent protocol is an open standard that allows different AI agents to securely communicate, collaborate, and solve complex problems together.
 site_author: The Linux Foundation
 site_dir: site
 
@@ -11,7 +11,6 @@ extra:
   analytics:
     provider: google
     property: G-RB39M83WHB
-
 
 # Navigation
 nav:
